# fast-car-api

./: README.md  alembic.ini  cars.db  mkdocs.yml  pyproject.toml  requirements.txt
fast_car_api/: app.py  database.py  models.py  routers.py  schemas.py
migrations/versions/: aaa15276c76d_create_cars_table.py
